src/pages/Relax/FaceTime/FaceTime.css
.face-time {
  position: relative;
}

video {
  width: 100%;
  aspect-ratio: 16 / 9;
}

.stream-controls {
  position: absolute;
  left: 50%;
  bottom: var(--s-dock);
  transform: translateX(-50%);
}

.stop-watch {
  position: absolute;
  top: var(--s-dock);
  left: var(--s-dock);
}

.stream-controls,
.stop-watch {
  backdrop-filter: blur(var(--s-indicator));
  -webkit-backdrop-filter: blur(var(--s-indicator));
}

.toast-list {
  position: fixed;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  list-style: none;
}

.toast {
  border-radius: 1rem;
}

.toast__progress-track {
  height: var(--s-unit);
  background-color: var(--c-ambient);
  margin-top: var(--s-safe);
}

.toast__progress-fill {
  height: 100%;
  width: var(--kb-toast-progress-fill-width);
  transition: width 250ms linear;
}

.toast[data-closed] {
  animation: hide 0.1s cubic-bezier(0.4, 0, 0.6, 1);
}

.room {
  grid-template-columns: 4fr 1fr;
}

.youtube {
  position: relative;
}

.youtube iframe {
  height: 100%;
  border: 0;
}

@keyframes hide {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@media screen and (max-width: 1052px) {
  .room {
    grid-template-columns: 1fr;
  }
}

